--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -22,6 +22,8 @@
         android:id="@+id/image_to_paint"
         android:layout_width="match_parent"
         android:layout_height="500dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_toolbar" />
 
     <com.google.android.material.textview.MaterialTextView
@@ -33,7 +35,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_to_paint" />
+        app:layout_constraintTop_toBottomOf="@+id/image_to_paint" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/slider"
