--- a/app/src/main/res/layout/fragment_order_processing.xml
+++ b/app/src/main/res/layout/fragment_order_processing.xml
@@ -10,16 +10,17 @@
         android:id="@+id/loading_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="356dp"
         android:text="@string/loading_text"
         android:textAlignment="center"
         android:textSize="32sp"
         android:textStyle="normal"
         android:tint="?colorOnSurface"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.427" />
 
     <ProgressBar
         android:id="@+id/loadingProgressBar"
