--- a/app/src/main/res/layout/fragment_order_success.xml
+++ b/app/src/main/res/layout/fragment_order_success.xml
@@ -10,15 +10,17 @@
         android:id="@+id/success_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="356dp"
         android:text="@string/loading_success"
         android:textAlignment="center"
         android:textSize="32sp"
         android:textStyle="normal"
         android:tint="?colorOnSurface"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.398" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/order_code"
@@ -37,13 +39,14 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/continue_button"
-        android:layout_width="100dp"
+        android:layout_width="198dp"
         android:layout_height="wrap_content"
         android:text="@string/loading_next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.864" />
+        app:layout_constraintVertical_bias="0.834" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
